--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,18 +28,18 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet pack --no-restore
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
-      with:
-    # Artifact name
-    #    name: # optional, default is artifact
-    # A file, directory or wildcard pattern that describes what to upload
-        path: |
-          **\*.nupkg
-    - name: GitHub Releases
-  # You may pin to the exact commit or the version.
-  # uses: fnkr/github-action-ghr@96b1448dc6162f370067e1de51e856e733a76b4f
-      uses: fnkr/github-action-ghr@v1.3      
+      
+    - name: Setup NuGet.exe for use with actions
+      uses: NuGet/setup-nuget@v1.0.6
+      
+#    - name: 添加github仓库
+ #     run: |
+ #       nuget sources add -name github -Source https://nuget.pkg.github.com/BeautifulPilgrim/index.json -Username BeautifulPilgrim -Password ${{ secrets.GitHubToken }}
+ #   - name: 发布生成包到github和nuget
+ #     run: |
+ #       nuget push ./bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
+ #       nuget push ./bin/Release/*.nupkg -Source github -SkipDuplicate
+        
     - name: Publish NuGet
   # You may pin to the exact commit or the version.
   # uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
@@ -47,21 +47,5 @@ jobs:
       with:
     # Filepath of the project to be packaged, relative to root of repository
         PROJECT_FILE_PATH: MauiAudio.csproj
-    # NuGet package id, used for version detection & defaults to project name
-    #    PACKAGE_NAME: # optional
-    # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-    #    VERSION_FILE_PATH: # optional
-    # Regex pattern to extract version info in a capturing group
-    #    VERSION_REGEX: # optional, default is ^\s*<Version>(.*)<\/Version>\s*$
-    # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-    #    VERSION_STATIC: # optional
-    # Flag to toggle git tagging, enabled by default
-    #    TAG_COMMIT: # optional, default is true
-    # Format of the git tag, [*] gets replaced with actual version
-    #    TAG_FORMAT: # optional, default is v*
-    # API key to authenticate with NuGet server
         NUGET_KEY: ${{ secrets.NugetKey }}
-    # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-    #    NUGET_SOURCE: # optional, default is https://api.nuget.org
-    # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-    #    INCLUDE_SYMBOLS: # optional
+
