--- a/MauiAudio.csproj
+++ b/MauiAudio.csproj
@@ -13,6 +13,8 @@
 		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
 		<Version>1.0.0</Version>
+		<RootNamespace>Plugin.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<AssemblyName>Plugin.$(MSBuildProjectName)</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
