--- a/MauiAudio.csproj
+++ b/MauiAudio.csproj
@@ -13,8 +13,12 @@
 		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
 		<Version>1.0.0</Version>
-		<RootNamespace>Plugin.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
-		<AssemblyName>Plugin.$(MSBuildProjectName)</AssemblyName>
+		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
+		<PackageId>Plugin.MauiAudio</PackageId>
+		<PackageProjectUrl>https://github.com/BeautifulPilgrim/MauiAudio</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/BeautifulPilgrim/MauiAudio</RepositoryUrl>
+		<Description>MauiAudio-Cross platform audio plugin for MAUI</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
