--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,15 +41,12 @@ jobs:
     - name: 发布生成包到github和nuget
       run: |
         nuget push **/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
-        nuget push ./bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
+#        nuget push ./bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
  #       nuget push ./bin/Release/*.nupkg -Source github -SkipDuplicate
         
-    - name: Publish NuGet
-  # You may pin to the exact commit or the version.
-  # uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
-      uses: brandedoutcast/publish-nuget@v2.5.5
-      with:
-    # Filepath of the project to be packaged, relative to root of repository
-        PROJECT_FILE_PATH: MauiAudio.csproj
-        NUGET_KEY: ${{ secrets.NugetKey }}
+#    - name: Publish NuGet
+#      uses: brandedoutcast/publish-nuget@v2.5.5
+#      with:
+#        PROJECT_FILE_PATH: MauiAudio.csproj
+#        NUGET_KEY: ${{ secrets.NugetKey }}
 
