feat: try to add Sample

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,8 @@ jobs:
           & dotnet nuget locals all --clear
           & dotnet workload install maui --source https://aka.ms/dotnet6/nuget/index.json --source https://api.nuget.org/v3/index.json
           & dotnet workload install android ios maccatalyst tvos macos maui wasm-tools maui-maccatalyst --source https://aka.ms/dotnet6/nuget/index.json --source https://api.nuget.org/v3/index.json
+    - name: Enter Directory
+      run: cd MauiAudio
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
