--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,13 +23,14 @@ jobs:
       run: |
           & dotnet nuget locals all --clear
           & dotnet workload install maui --source https://aka.ms/dotnet6/nuget/index.json --source https://api.nuget.org/v3/index.json
-          & dotnet workload install android ios maccatalyst tvos macos maui wasm-tools maui-maccatalyst --source https://aka.ms/dotnet6/nuget/index.json --source https://api.nuget.org/v3/index.json
-    - name: Enter Directory
-      run: cd MauiAudio
+          # & dotnet workload install android ios maccatalyst tvos macos maui wasm-tools maui-maccatalyst --source https://aka.ms/dotnet6/nuget/index.json --source https://api.nuget.org/v3/index.json
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+          & cd MauiAudio
+          & dotnet restore
     - name: Build
-      run: dotnet pack --no-restore --configuration Release
+      run: |
+          & dotnet pack --no-restore --configuration Release
       
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.6
@@ -39,9 +40,11 @@ jobs:
  #       nuget sources add -name github -Source https://nuget.pkg.github.com/BeautifulPilgrim/index.json -Username BeautifulPilgrim -Password ${{ secrets.GitHubToken }}
     - name: list
       run: |
+        cd MauiAudio
         dir ./bin/Release
     - name: 发布生成包到github和nuget
       run: |
+        cd MauiAudio
         nuget push **/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
 #        nuget push ./bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
  #       nuget push ./bin/Release/*.nupkg -Source github -SkipDuplicate
