--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET Package test
 
 on:
   push:
@@ -32,27 +32,3 @@ jobs:
       run: |
           & cd MauiAudio
           & dotnet pack --no-restore --configuration Release
-      
-    - name: Setup NuGet.exe for use with actions
-      uses: NuGet/setup-nuget@v1.0.6
-      
-#    - name: 添加github仓库
- #     run: |
- #       nuget sources add -name github -Source https://nuget.pkg.github.com/BeautifulPilgrim/index.json -Username BeautifulPilgrim -Password ${{ secrets.GitHubToken }}
-    - name: list
-      run: |
-        cd MauiAudio
-        dir ./bin/Release
-    - name: 发布生成包到github和nuget
-      run: |
-        cd MauiAudio
-        nuget push **/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
-#        nuget push ./bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
- #       nuget push ./bin/Release/*.nupkg -Source github -SkipDuplicate
-        
-#    - name: Publish NuGet
-#      uses: brandedoutcast/publish-nuget@v2.5.5
-#      with:
-#        PROJECT_FILE_PATH: MauiAudio.csproj
-#        NUGET_KEY: ${{ secrets.NugetKey }}
-
